--- a/index.html
+++ b/index.html
@@ -14,27 +14,28 @@
 <body>
     <header>
         <div class="presentation">
-            <div class="presentation__spectrum">
-                <div>
-                    <img class="logo" src="images/logo.png">
-                    <div class="menu">
-                        <p></p>
-                        <p></p>
-                        <p></p>
-                    </div>
+            <div class="logoMenu">
+                <img class="logoMenu__logo" src="images/logo.png">
+                <div class="logoMenu__menu">
+                    <p></p>
+                    <p></p>
+                    <p></p>
                 </div>
-                <h1>DESIGNING<br>
-                    & BUILDING</h1>
-                <h2>MODERN ENERGY<br>
-                    EFFICIENT HOUSES<br>
-                    FROM 150 SQ. M.</h2>
-                <button>CONTACT US</button>
             </div>
             
             <div class="slideContainer">
                 <div class="slider slider1 fade"></div>
                 <div class="slider slider2 fade"></div>
                 <div class="slider slider3 fade"></div>
+            </div>
+
+            <div class="presentation__spectrum">
+                <h1>DESIGNING<br>
+                    & BUILDING</h1>
+                <h2>MODERN ENERGY<br>
+                    EFFICIENT HOUSES<br>
+                    FROM 150 SQ. M.</h2>
+                <button>CONTACT US</button>
             </div>
             
         </div>
