Ajout des domaines d'expertise de spectrum et d'un formulaire de contact tout en les rendants responsive

--- a/index.html
+++ b/index.html
@@ -65,5 +65,42 @@
             </div>
         </div>
     </header>
+
+    <main>
+        <section class="expertise">
+            <div class="expertise__index-bg">
+                <img src="images/index-7.png" alt="Croqui d'une maison">
+            </div>
+
+            <div class="expertise__presentation">
+                <div class="presentationDomaine">
+                    <i class="fa-regular fa-building"></i>
+                    <h2>ARCHITECTURE</h2>
+                    <p>We provide high-quality architecture services.</p>
+                </div>
+                <div class="presentationDomaine">
+                    <i class="fa-solid fa-pen-nib"></i>
+                    <h2>INTERIOR DESIGN</h2>
+                    <p>Our team offers unique and stylish architecture solutions.</p>
+                </div>
+                <div class="presentationDomaine">
+                    <i class="fa-regular fa-lightbulb"></i>
+                    <h2>LIGHTING DESIGN</h2>
+                    <p>Let our team design unique lighting for your home.</p>
+                </div>
+            </div>
+
+            <div class="expertise__contactForm">
+                <h2>FIND OUT THE PRICE OF YOUR HOME</h2>
+                <h3>WE WILL CONTACT YOU WITHIN 24 HOURS</h3>
+                <form>
+                    <input type="text" id="name" name="name" placeholder="Name">
+                    <input type="email" id="mail" name="mail" placeholder="Email">
+                    <input type="tel" id="phone" name="phone" placeholder="Phone">
+                    <button>SUBMIT</button>
+                </form>
+            </div>
+        </section>
+    </main>
 </body>
 </html>
