--- a/index.html
+++ b/index.html
@@ -101,6 +101,32 @@
                 </form>
             </div>
         </section>
+
+        <section class="workMethod">
+            <div class="workMethod__details">
+                <h4>4 STEPS TO A NEW HOME</h4>
+                <h2>HOW WE DO IT</h2>
+                <h3 id="mwthodWorkTitle">MEET AND DEFINE GOALS</h3>
+                <p id="mwthodWorkText">
+                    The first thing we do is meeting with our clients and talk through their goals on a future project. 
+                    During this meeting, feel free to communicate your ideas and ask lots of questions.
+                    <br>
+                    <br>
+                    This stage is highly decisive as you can evaluate the work of your potential architect by browsing their portfolio. 
+                    As a client, you may also assess whether the architect listens to your needs and confirms that he or she understands them.
+                </p>
+            </div>
+
+            <div class="workMethod__list">
+                <ol>
+                    <li id="methodWorkList1" onclick="changeWMList(1)"><span></span>ACQUITANCE WITH THE CUSTOMER</li>
+                    <li id="methodWorkList2" onclick="changeWMList(2)"><span></span>PROJECT CONCEPT DEVELOPMENT</li>
+                    <li id="methodWorkList3" onclick="changeWMList(3)"><span></span>WORKING ON INTERIOR AND EXTERIOR</li>
+                    <li id="methodWorkList4" onclick="changeWMList(4)"><span></span>FINISHING TOUCHES FOR YOUR FUTURE HOME</li>
+                </ol>
+                <img id="methodWorkImg" src="images/index-1.jpg">
+            </div>
+        </section>
     </main>
 </body>
 </html>
