Ajout de la section client

--- a/index.html
+++ b/index.html
@@ -373,6 +373,56 @@
                 </div>
             </div>
         </section>
+
+        <section class="client">
+            <i class="fa-solid fa-quote-left client__quote"></i>
+            <div class="client__users">
+                <div class="diapoContainer">
+                    <div class="diapo clientFade">
+                        <p class="userWords">I have worked with many companies offering design & architecture services, 
+                            and out of all you were one who really stood out from the rest and did a great job.</p>
+                        <div class="user">
+                            <img src="images/users/user-1.jpg" alt="User 1">
+                            <h4>KATE WILLIAMS</h2>
+                            <h5>Entrepreneur</h3>
+                        </div>
+                    </div>
+                    <div class="diapo clientFade">
+                        <p class="userWords">I was looking for top-notch creativity and quality service and I found what I needed in your team. 
+                            You took all my ideas and demands into consideration and made a great project.</p>
+                        <div class="user">
+                            <img src="images/users/user-2.jpg" alt="User 2">
+                            <h4>Ann Lee</h4>
+                            <h5>Freelancer</h5>
+                        </div>
+                    </div>
+                    <div class="diapo clientFade">
+                        <p class="userWords">I selected Spectrum because of their architects’ rigorous design background and education. 
+                            They exceeded my expectations and did a great a job on extending and redesigning my house.</p>
+                        <div class="user">
+                            <img src="images/users/user-3.jpg" alt="User 3">
+                            <h4>SAM MCMILLAN</h2>
+                            <h5>Manageur</h3>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="clients_slider_nav">
+                    <a href="#slide-1" onclick="clientCurrentSlide(1)"></a>
+                    <a href="#slide-2" onclick="clientCurrentSlide(2)"></a>
+                    <a href="#slide-3" onclick="clientCurrentSlide(3)"></a>
+                </div>
+
+                <h3>Trusted by</h2>
+                <div class="ourClients">
+                    <img src="images/users/clients-1.webp" alt="logo of client 1">
+                    <img src="images/users/clients-2.webp" alt="logo of client 2">
+                    <img src="images/users/clients-3.webp" alt="logo of client 3">
+                    <img src="images/users/clients-4.webp" alt="logo of client 4">
+                    <img src="images/users/clients-5.webp" alt="logo of client 5">
+                </div>
+            </div>
+        </section>
     </main>
 
 </body>
