Ajout du footer

--- a/index.html
+++ b/index.html
@@ -425,5 +425,18 @@
         </section>
     </main>
 
+    <footer>
+        <img class="logoInverse" src="images/logo-inverse-2.webp" alt="Logo inverser">
+        <p class="phoneNumber">1-800-901-234</p>
+        <p class="emailFooter">info@demolink.org</p>
+        <p class="footerLine"></p>
+        <div class="footerSocialMedia">
+            <i class="fa-brands fa-facebook-f"></i>
+            <i class="fa-brands fa-square-instagram"></i>
+            <i class="fa-brands fa-youtube"></i>
+        </div>
+        <p class="copyright">©  2024 Spectrum. All Rights Reserved. Design by Zemez</p>
+    </footer>
+
 </body>
 </html>
