Ajout du formulaire de contact

--- a/index.html
+++ b/index.html
@@ -423,6 +423,28 @@
                 </div>
             </div>
         </section>
+        
+        <section class="contactUs">
+            <div class="contactUs__index-bg">
+                <img src="images/index-9.png" alt="Croquis d'une maison">
+            </div>
+
+            <div class="contactUs__img-deco">
+                <img src="images/index-6.webp" alt="Element de decos de maison">
+            </div>
+
+            <div class="contactUs__form">
+                <h2>GET IN TOUCH WITH
+                    <br>OUR TEAM</h2>
+                <h3>LET'S WORK TOGETHER!</h3>
+                <form>
+                    <input type="text" id="name" name="name" placeholder="Name">
+                    <input type="email" id="mail" name="mail" placeholder="Email">
+                    <input type="tel" id="phone" name="phone" placeholder="Phone">
+                    <button>SUBMIT</button>
+                </form>
+            </div>
+        </section>
     </main>
 
     <footer>
